--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "sass": "^1.51.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
